# nsis

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py.sample  dependencies.py  ip_blocklist.py  ip_tracker.py  main.py  rate_limit.py
app/api/: __init__.py
app/services/: __init__.py  milvus_service.py  transformation_service.py  vufind_service.py
app/static/: research-compass-settings.js  research-compass.css  research-compass.html  research-compass.js
app/utils/: __init__.py  abort.py  dev_print.py  dev_print_api.py  logging.py
core/: __init__.py  milvus_search.py  models_config.py  read_prompt.py  usage_stats_logging.py
core/clients/: __init__.py  inference_api_client.py  vufind_api_client.py
core/inference/: __init__.py  base.py  embeddings.py  expand.py  facettes.py  logical_tree.py  query_quality.py  reranker.py  search_intent.py
core/prompts/: system_prompt_expand.md  system_prompt_extract_facettes.md  system_prompt_map_keyword.md  system_prompt_query_quality.md  system_prompt_reranker_search.md  system_prompt_reranker_vocabulary.md  system_prompt_search_intent.md  user_prompt_expand_search_question.md
core/schemas/: __init__.py  expand.py  types.py  (+5 more)
deploy/: research-compass.service
docs/: 00_overview.md  01_system_architecture.md  02_codebase_structure.md  03_feature_inventory.md  04_api_endpoints.md  05_technical_details.md  06_user_workflows.md  07_config_and_running.md
scripts/: initialize_databases.py
tests/: access_test.py  api_endpoints_test.py  milvus_recall_quality_test.py  test_corpus_qe.py
(+38 files in other folders)
