[project]
name = "nsis"
version = "1.0.0"
description = "Natürlichsprachige Suche im StabiKat - API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests==2.32.5",
    "pymilvus==2.6.4",
    "milvus-lite==2.5.1",
    "setuptools==80.9.0",
    "pydantic==2.12.5",
    "openai==2.9.0",
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "pydantic-settings==2.13.1",
    "pytest==9.0.2",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "cachetools==7.0.6",
    "rdflib==7.6.0",
    "pymarc==5.3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "flowmark==0.6.5",
    "pyright==1.1.409",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
]
